--- a/client/my-react-vite/package.json
+++ b/client/my-react-vite/package.json
@@ -14,17 +14,18 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.0",
     "@mui/styles": "^6.4.8",
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.74.11",
     "axios": "^1.9.0",
-    "react": "^18.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.56.1",
+    "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.3",
-    "zod": "^3.24.3"
+    "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.18",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
