--- a/client/my-react-vite/package.json
+++ b/client/my-react-vite/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.18",
     "zod": "^3.24.4"
   },
